# simpleblob.github.io

./: .gitignore  CLAUDE.md  CNAME  LICENSE  MIGRATION.md  README.md  _config.yml  about.html  archive.html  contact.html  deploy.sh  experiments.html  index.html  pyproject.toml  watch.sh
_data/: navigation.yml
_includes/: archive-single.html
_layouts/: archive.html  default.html
_pages/: blog-archive.md
_posts/: 2016-06-01-web-scraping-japanese-text.md  2016-06-15-countries-export-visualized-using-d3.js.md  2016-08-02-www-name-generator.md  2016-08-15-ml-algorithm-stepbystep.md
_site/: 404.html  index.html
css/: default.css  minimal.css  responsive_table.css  solarized_light.css
myblog/: .gitignore  LICENSE  about.rst  config.toml  contact.md  convert_org_to_md.py  deploy.sh  index.html  myblog.cabal  server.sh  site.hs  sitegen.py  watch.sh
posts/: 2015-08-23-example.html  2016-07-13-book_summary--deep-work.html  2016-12-21-org-mode-in-hakyll.html  2017-11-06-example_post.html  archiving.html  bitcoin.html  book_summary--100-truths-you-will-learn-too-late.html  book_summary--antifragile.html  book_summary--deep-work.html  book_summary--early-retirement-extreme.html  book_summary--elon-musk.html  book_summary--how-economic-machine-works-by-ray-dalio.html  book_summary--how-to-fail-at-almost-everything-and-still-win-big-by-scott-adams.html  book_summary--making-habits.html  book_summary--navy-seal-fitness-guide.html  book_summary--positive-workplace-politics.html  book_summary--principles-by-ray-dalio.html  book_summary--thinking-fast-and-slow.html  (+18 more)
(+97 files in other folders)
